--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -986,6 +986,9 @@ jobs:
     - name: Configure CephFS mirror
       run : ~/actionutils.sh remote_configure_cephfs_mirroring
 
+    - name: Verify CephFS mirror list
+      run : ~/actionutils.sh replication_verify_cephfs_list_output
+
     - name: Perform IO and Wait for CephFS mirror to sync directories
       run : ~/actionutils.sh remote_wait_cephfs_for_secondary_to_sync 40
 
