fix: Resolved comments and CI test
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1235,7 +1235,9 @@ jobs:
           fetch-depth: 0
 
       - name: Copy utils
-        run: cp tests/scripts/actionutils.sh $HOME
+        run: |
+          cp tests/scripts/actionutils.sh $HOME
+          cp tests/scripts/adoptutils.sh $HOME
 
       - name: Clear FORWARD firewall rules
         run: ~/actionutils.sh cleaript
