fix: Add content attributes for content plugs
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -20,12 +20,14 @@ plugs:
 slots:
   ceph-logs:
     interface: content
+    content: logs
     source:
       read:
         - "$SNAP_COMMON/logs"
 
   ceph-conf:
     interface: content
+    content: ceph-conf
     source:
       read:
         - "$SNAP_DATA/conf"
